# ddb_output_pulse2

./: .gitmodules  Makefile  README.md  autogen.sh  configure.ac  corktest.c  gotchas.md  meson.build  meson_options.txt  pulse.c
po/: LINGUAS  POTFILES  ddb_output_pulse2.pot  en.po  meson.build  nb.po
src/: Makefile.am  pasimple.c  pasimple.h  pulse.c
